enhanced claude file